--- a/christ.html
+++ b/christ.html
@@ -10,4 +10,7 @@
 </body>
 <h1>les jeux de l'enfer </h1>
 <p>je suis la a la maison et toi </p>
+
+<h2> le paradis ou l'enfer </h2>
+<p> je choisi le paradis </p>
 </html>
