--- a/christ.html
+++ b/christ.html
@@ -6,11 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    
-</body>
-<h1>les jeux de l'enfer </h1>
-<p>je suis la a la maison et toi </p>
+ <div>
+     <h1>les jeux de l'enfer </h1>
+
+    <p>je suis la a la maison et toi </p>
+    </div>
 
 <h2> le paradis ou l'enfer </h2>
 <p> je choisi le paradis </p>
+<div><h2> Planete</h2>
+</div>
+</body>
 </html>
