--- a/christ.html
+++ b/christ.html
@@ -15,6 +15,9 @@
 <h2> le paradis ou l'enfer </h2>
 <p> je choisi le paradis </p>
 <div><h2> Planete</h2>
+    <div>
+        tatoo
+    </div>
 </div>
 </body>
 </html>
