--- a/christ.html
+++ b/christ.html
@@ -7,13 +7,13 @@
 </head>
 <body>
  <div>
-     <h1>les jeux de l'enfer </h1>
+     <h1>les jeux de l'enfer  </h1>
 
-    <p>je suis la a la maison et toi </p>
+    <p>je suis la a la maison  </p>
     </div>
 
-<h2> le paradis ou l'enfer </h2>
-<p> je choisi le paradis </p>
+<h2> le paradis ou  </h2>
+<p> je choisi le paradis ! </p>
 <div><h2> Planete</h2>
     <div>
         tatoo
