--- a/christ.html
+++ b/christ.html
@@ -9,7 +9,7 @@
  <div>
      <h1>les jeux de l'enfer  </h1>
 
-    <p>je suis la a la maison  </p>
+    <p>je suis la a la maison ! </p>
     </div>
 
 <h2> le paradis ou  </h2>
