--- a/christ.html
+++ b/christ.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>jedis-nigth</title>
+    <title>Document</title>
 </head>
 <body>
  <div>
-     <h1>les jeux de l'enfer  </h1>
+     <h1>les jeux de l'enfer </h1>
 
-    <p>je suis la a la maison ! </p>
+    <p>je suis la a la maison et toi </p>
     </div>
 
-<h2> le paradis ou  </h2>
-<p> je choisi le paradis ! </p>
+<h2> le paradis ou l'enfer </h2>
+<p> je choisi le paradis </p>
 <div><h2> Planete</h2>
     <div>
         - tatoo
