--- a/christ.html
+++ b/christ.html
@@ -9,7 +9,7 @@
  <div>
      <h1>les jeux de l'enfer </h1>
 
-    <p>je suis la a la maison et toi </p>
+    <p>je suis la a la maison et toi!! </p>
     </div>
 
 <h2> le paradis ou l'enfer </h2>
