--- a/christ.html
+++ b/christ.html
@@ -13,7 +13,7 @@
     </div>
 
 <h2> le paradis ou l'enfer </h2>
-<p> je choisi le paradis </p>
+<p> je choisi le paradis !!</p>
 <div><h2> Planete</h2>
     <div>
         - tatoo
